  the selected folder as it should (patch #3543499 by Eric Le Lay)
  [merged into 5.0.x]

- Fixed VFS session not ended in VFS.copy() api (#3522406 Matthieu Casanova)

- Use of a scrollable list for delete dialog confirmation
  (#2911520 Matthieu Casanova)

- The macro Display_Abbreviations is broken (#3539691 Matthieu Casanova)
  [merged into 5.0.x]

}}}
{{{ API Changes

- New method VFSBrowser.getLastVisitedPath() (Jarek Czekalski)

- New method IOUtilities.closeQuietly(ObjectInput) (Matthieu Casanova)

- New method IOUtilities.closeQuietly(ObjectOutput) (Matthieu Casanova)

- New method MiscUtilities.openInDesktop() (Alan Ezust) [merged into 5.0.x]

- New method GUIUtilities.setAutoMnemonic(AbstractButton) (Jarek Czekalski)

- New method: View.getBuffers(), aware of bufferset scope. (Alan Ezust)

- Removed View.setBuffer(Buffer, boolean, boolean) and
  View.setBuffer(Buffer, boolean): methods that had disableFileCheck flag in
  since View no longer checks file status there. (#1871440 Alan Ezust)

- AllBufferSet.AllBufferSet(String glob, View v) - additional required
  argument for View in constructor argument list. (#3423442 Alan Ezust)


}}}
{{{ Editing

- Added highlight of chapter title in rfc edit mode (Matthieu Casanova)

- Fixed shellscript do escape single quote with backslash
  (#3557453 Matthieu Casanova)

- Updated ColdFusion mode (#3518536, #3561048 Darien Brown)

- Updated Verilog mode (#3536967 Steve snarum-micron)

}}}
{{{ UI

- Added a right click popup menu with a copy action in the Error dialog
  (#3557023 Matthieu Casanova)

- Avoid trouble with horizontal scrolling (Patch #3134788, EdorFaus)

- Enable ContextMenu via keyboard to VFS-BrowserView (#3560239, Thomas Meyer)

- Added russian localization (patch #3544154 Vladimir Avdonin)
  [merged into 5.0.x]

- Added a possibility to suppress synchronization of the filter in search
  dialog, using a hidden setting in jedit.props: search.dontSyncFilter.
  (Jarek Czekalski)
